alignment fixes

--- a/src/components/OurFeature/OurFeature.module.scss
+++ b/src/components/OurFeature/OurFeature.module.scss
@@ -48,7 +48,7 @@
   .promptMainContainer {
     padding: 32px;
     background: #121212;
-    width: 50%;
+    width: 75vw;
     border-radius: 8px;
     box-shadow: 0px 0px 8px 0px rgba(189, 66, 48, 0.25);
     .promptTopContainer {
