--- a/src/components/homeHeader/homeHeader.module.scss
+++ b/src/components/homeHeader/homeHeader.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   align-items: center;
   height: 96px;
-  width: 96vw;
+  width: 95vw;
   margin: auto;
   position: relative;
   // top: 24px;
